# cxproc

./: .clang-format  .gitmodules  AUTHORS  CMakeLists.txt  LICENSE  LICENSE-THIRD-PARTY  README.md  TODO.md
cmake/: CMakeLists.txt  c-dt.cmake  docs.cmake  helper.cmake  package.cmake  report.cmake  tests.cmake
cmake/Modules/: FindDuktape.cmake  FindExif.cmake  FindId3Tag.cmake  FindLibBase64.cmake  FindLibCMark.cmake  FindLibOGG.cmake  FindLibVorbis.cmake  FindLibZip.cmake  FindLocalBZip2.cmake  FindLocalCURL.cmake  FindLocalIconv.cmake  FindLocalLibLZMA.cmake  FindLocalLibXml2.cmake  FindLocalLibXslt.cmake  FindLocalSQLite3.cmake  FindLocalThreads.cmake  FindLocalZLIB.cmake  FindPCRE2.cmake
cmake/Options/: archive.cmake  audio.cmake  c-dt.cmake  database.cmake  image.cmake  json.cmake  petrinet.cmake  pie.cmake  rp.cmake  script.cmake  vorbiscomment.cmake
debian/: changelog  control  copyright  prerm  rules
doc/: CxprocModules.odg  ISO 8601.mm  ParserMatrix.csv  TESTING.md  TODO.md  UnicodeChars.txt  config.cxp  control.txt  cxproc-build-gnu.md  cxproc-build-vs.md  cxproc.1  elements.txt  install.txt  main.txt  modules.txt  runmodes.txt  script.txt  todo.mm
examples/: QueryDatabase.cxp  exifmover.cxp  myclean.cxp  xgrep.cxp  xzip.cxp
examples/DiskUsage/: CgiDiskUsage.cxp  DiskUsage.cxp  DiskUsage.xsl  DiskUsageDemo.bat  MirrorDirTree.cxp
examples/SaveValues/: SaveValues.cxp  cxproc-savevalues.conf
examples/audioserver/: CgiDirAudio.cxp  CgiPlayFile.cxp  CgiPlayList.cxp  README.md  cxproc-audio.conf  index.html
examples/exifmover/: exifmover.cxp  exifmover.xsl
misc/: Doxyfile  Doxygen  Profiling.md  Testing.md  config.el  cxproc-ctest.bat  debug.gdb  depends.awk  prepare-cmake.bat  prepare-cmake.sh  start-apache.bat  vcpkg-tools.diff
src/: STYLE  basics.h  calendar_element.c  calendar_element.h  cxproc-cgi.c  cxproc-httpd.c  cxproc-test.c  cxproc.c  dir2csv.c  dir2sqlite.c  dom.c  dom.h  filex.c  git_info.h  git_revision.h  pietextx.c  plain_text.c  plain_text.h  utils.c  utils.h  version.h  version.rc
src/cxp/: calendar_element.c  calendar_element.h  cxp.c  cxp.h  cxp_archive.c  cxp_archive.h  cxp_calendar.c  cxp_calendar.h  cxp_context.c  cxp_context.h  cxp_context_cache.c  cxp_context_cache.h  cxp_context_cgi.c  cxp_context_cgi.h  cxp_context_cli.c  cxp_context_cli.h  cxp_context_enc.c  cxp_context_enc.h  cxp_dir.c  cxp_dir.h  cxp_dtd.h  cxp_subst.c  cxp_subst.h  cxp_threadp.c  cxp_threadp.h  cxp_timezone.c  cxp_timezone.h
src/res_node/: res_mime.c  res_mime.h  res_node.c  res_node.h  res_node_archive.c  res_node_archive.h  res_node_formats.c  res_node_formats.h  res_node_io.c  res_node_io.h  res_node_list.c  res_node_list.h  res_node_ops.c  res_node_ops.h  res_node_properties.c  res_node_zip.c  res_node_zip.h  res_path.c  res_path.h
src/test/: TESTING  test-cgi.c  test_calendar_element.c  test_dom.c  test_dt.c  test_io.c  test_libarchive.c  test_libcurl.c  test_libsqlite.c  test_libxml.c  test_libxslt.c  test_libzip.c  test_pcre.c  test_plain_text.c  test_threads.c  test_utils.c
test/: config-test.cxp  config.cxp  test-all.sh  test-regression.sh  test-xmllint.sh
test/calendar/: config.cxp  test-calendar-001.cxp  test-calendar-003.cxp  test-calendar-003.txt  test-calendar.cxp
test/cgi/: test_cgi.bat  test_cgi.sh  test_urls.txt
test/cli/: test_cli.sh
test/dir/: config.cxp  search.cxp  test-dir-001.cxp  test-dir-002.cxp  test-dir-003.cxp  test-dir-004.cxp  test-dir-005.cxp  test-dir-006.cxp  test-dir-007.cxp  test-dir-008.cxp  test-dir-009.cxp  test-dir-010.cxp  test-dir-011.cxp  test-dir-012.cxp  test-dir-013.cxp  test-dir-014.cxp  test-dir-015.cxp
test/each/: config-dir.cxp  config.cxp  ids.txt  simple.txt
test/eval/: config.cxp  include.cxp
test/plain/: Length_128.txt  config.cxp  test-content-isolat1.txt  test-content-utf16be.txt  test-plain-001.cxp  test-plain-002.cxp  test-plain-003.cxp  test-plain-004.cxp  test-plain-004.xml  test-plain-005.cxp  test-plain-006.cxp  test-plain-007.cxp  test-plain-008.cxp  test-plain-009.cxp  test-plain-010.cxp  test-plain-011.cxp  test-plain-cache-001.cxp  test-plain-cache-002.cxp  test-plain-subst-001.cxp  test-unicode-bom.txt  test-unicode16-bom.txt
test/system/: config-view.cxp  config.cxp  test-system-001.cxp  test-system-002.cxp  test-system-003.cxp  test-system-004.cxp  test-system-005.cxp  test-system-006.cxp  test-system-007.cxp  test-system-008.cxp  test-system-009.cxp  test-system-010.cxp  test-system-011.cxp  test-system-012.cxp  test-system-013.cxp  test-system-014.cxp  test-system-015.cxp
test/thread/: config.cxp  download.cxp
test/worst/: config.cxp
test/xhtml/: config.cxp  test-xhtml-001.cxp  test-xhtml-002.cxp  test-xhtml-003.cxp  test-xhtml-004.cxp  test-xhtml-005.cxp  test-xhtml-006.cxp  test-xhtml-007.cxp  test-xhtml-008.cxp  test-xhtml-009.cxp  test-xhtml-010.cxp  test-xhtml-011.cxp  test.html
test/xml/: baustelle.pie  body.html  check-xml.cxp  config-html-include.cxp  config-xml-cache.cxp  config-xml-eval.cxp  config-xml-include-a.cxp  config-xml-include-aa.cxp  config-xml-include-aaa.cxp  config-xml-include.cxp  config-xml-subst-dialog.cxp  config-xml-subst.cxp  config-xml.cxp  config.cxp  dummy-a.xml  dummy-b.xml  dummy-c.xml  generic.cxp  generic.xml  head.xml  test-html-include-001.cxp  test-xml-000-000.cxp  test-xml-000-001.cxp  test-xml-001-001.cxp  test-xml-001-002.cxp  test-xml-001-003.cxp  test-xml-002-001.cxp  test-xml-003.cxp  test-xml-004.cxp  test-xml-cache-001.cxp  test-xml-cache-002.cxp  test-xml-eval-001.cxp  test-xml-eval-002.cxp  test-xml-eval-003.cxp  test-xml-eval.xml  test-xml-include-000.cxp  test-xml-include-001.cxp  test-xml-include-002.cxp  test-xml-include-003.cxp  test-xml-include-004.cxp  (+4 more)
test/xsl/: NotValid.xsl  TestVariable.xsl  TestVariableChange.xsl  config.cxp  test-xsl-001.cxp  test-xsl-002.cxp  test-xsl-003.cxp  test-xsl-004.cxp  test-xsl-005.cxp  test-xsl-006.cxp  test-xsl-007.cxp  test-xsl-007.xml  test-xsl-008.cxp  test-xsl-009.cxp  test-xsl-010.cxp
vcpkg/: prepare-vcpkg.bat  prepare-vcpkg.sh
xml/schema/: cxp.rnc  cxp.rng  (+1 more)
(+331 files in other folders)
